; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eapol_supp/extr_eapol_supp_sm.c_eapol_sm_erp_flush.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eapol_supp/extr_eapol_supp_sm.c_eapol_sm_erp_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eapol_sm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eapol_sm_erp_flush(%struct.eapol_sm* %0) #0 {
  %2 = alloca %struct.eapol_sm*, align 8
  store %struct.eapol_sm* %0, %struct.eapol_sm** %2, align 8
  %3 = load %struct.eapol_sm*, %struct.eapol_sm** %2, align 8
  %4 = icmp ne %struct.eapol_sm* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load %struct.eapol_sm*, %struct.eapol_sm** %2, align 8
  %7 = getelementptr inbounds %struct.eapol_sm, %struct.eapol_sm* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @eap_peer_erp_free_keys(i32 %8)
  br label %10

10:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @eap_peer_erp_free_keys(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
